# LangPy

./: .gitignore  LICENSE  README.md  TODO.txt  copy.pyes  ejemplo.py  ejemplo.pyes  pyproject.toml  test.py  test.pyes
docs/: CNAME  index.html
src/langpy/cli/: main.py  messages.py
src/langpy/cli/transpile/: entryPoint.py  resolver.py  transpiler.py  tree.py
src/langpy/core/lexicon/: es.py  fr.py  pt.py
src/pyes/: __init__.py  __main__.py  cli.py
src/pyes/core/: importer.py
tests/: test_attributes.py  test_cli_errors.py  test_cli_force.py  test_cli_output.py  test_cli_transpile.py  test_cli_transpile_tree.py  test_import_basic.py  test_import_full.py  test_no_translation.py  test_package_import.py  test_strings_and_comments.py  test_transpiler_basic.py  test_ver2.py
