[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "LangPy"
version = "0.2.0"
description = "Write Python using your native-language keywords"
keywords = ["python", "transpiler", "español", "français", "português", "localization", "i18n", "education", "beginner-friendly"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

authors = [
  { name = "Esteban Salgado", email = "contact@langpy.org" }
]

dependencies = []

[project.urls]
Homepage = "https://langpy.org/"
Issues = "https://github.com/intoRandom/LangPy/issues"

[project.scripts]
langpy = "langpy.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]